--- a/standard.bib
+++ b/standard.bib
@@ -322,3 +322,34 @@ keywords = "Dimensionality reduction",
 keywords = "Eigenmaps",
 keywords = "Graph Laplacian"
 }
+
+@article{Oukrich2016,
+author = {Oukrich, Nadia and Maach, Abdelilah and Mabrouk, Sabri Elmahdi and Bouchard, Kevin},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Activity recognition using back-propagation algorithm and minimum redundancy feature selection method.pdf:pdf},
+isbn = {9781509007516},
+keywords = {activity recognition,back-propagation,feature selection,multilayer,perceptron,smart home},
+pages = {818--823},
+title = {{Activity recognition using back-propagation algorithm and minimum redundancy feature selection method}},
+year = {2016}
+}
+
+@INPROCEEDINGS{Jia_Jiang2006, 
+author={Y. Jia and Y. Jiang}, 
+booktitle={International Conference on Computer Graphics, Imaging and Visualisation (CGIV'06)}, 
+title={Active Contour Model with Shape Constraints for Bone Fracture Detection}, 
+year={2006}, 
+pages={90-95}, 
+keywords={X-ray imaging;bone;computer vision;image segmentation;maximum likelihood detection;medical image processing;X-ray image segmentation;bone fracture detection;casting material;geodesic active contour model;maximum-likelihood function;shape constraint;Active contours;Active shape model;Bones;Casting;Displays;Image segmentation;Maximum likelihood detection;Noise shaping;Signal to noise ratio;X-ray imaging}, 
+doi={10.1109/CGIV.2006.16}, 
+month={July},}
+
+@INPROCEEDINGS{Liang_Pan_Huang_Fan_2010, 
+author={J. Liang and B. C. Pan and Y. H. Huang and X. Y. Fan}, 
+booktitle={2010 International Conference on Wavelet Analysis and Pattern Recognition}, 
+title={Fracture identification of X-ray image}, 
+year={2010}, 
+pages={67-73}, 
+keywords={X-ray imaging;feature extraction;image recognition;image segmentation;mathematical morphology;medical image processing;statistical analysis;X-ray image;bone image segmentation;fracture identification;fracture recognition;high-order statistical moments;mathematical morphology;target border extraction;Image edge detection;Image segmentation;Pattern recognition;Pixel;Skeleton;Wavelet analysis;X-ray imaging;Fracture identification;High-order statistical moments;Mathematical morphology;Partial threshold method;X-ray image}, 
+doi={10.1109/ICWAPR.2010.5576438}, 
+ISSN={2158-5695}, 
+month={July},}
