--- a/standard.bib
+++ b/standard.bib
@@ -353,3 +353,27 @@ keywords={X-ray imaging;feature extraction;image recognition;image segmentation;
 doi={10.1109/ICWAPR.2010.5576438}, 
 ISSN={2158-5695}, 
 month={July},}
+
+@inproceedings{Donnelley2005,
+author = {Donnelley, Martin and Knowles, Greg},
+booktitle = {Proceedings of the Eighth International Symposium on Signal Processing and Its Applications, 2005.},
+doi = {10.1109/ISSPA.2005.1580224},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Computer aided long-bone segmentation and fracture detection.pdf:pdf},
+isbn = {0-7803-9243-4},
+number = {February 2005},
+pages = {175--178},
+publisher = {IEEE},
+title = {{Computer aided long bone fracture detection}},
+volume = {1},
+year = {2005}
+}
+
+@INPROCEEDINGS{Syiam_Aziem_Soliman2004, 
+author={M. M. Syiam and M. A. El-Aziem and M. E. M. Soliman}, 
+booktitle={Electrical, Electronic and Computer Engineering, 2004. ICEEC '04. 2004 International Conference on}, 
+title={Adagen: adaptive interface agent for x-ray fracture detection}, 
+year={2004}, 
+pages={354-357}, 
+keywords={Biomedical engineering;Computer interfaces;Computer networks;Face detection;Gas detectors;Knowledge engineering;Software agents;X-ray detection;X-ray detectors;X-ray imaging}, 
+doi={10.1109/ICEEC.2004.1374466}, 
+month={Sept},}
