--- a/standard.bib
+++ b/standard.bib
@@ -377,3 +377,13 @@ pages={354-357},
 keywords={Biomedical engineering;Computer interfaces;Computer networks;Face detection;Gas detectors;Knowledge engineering;Software agents;X-ray detection;X-ray detectors;X-ray imaging}, 
 doi={10.1109/ICEEC.2004.1374466}, 
 month={Sept},}
+
+@article{Mahendran2012,
+author = {Mahendran, S K and Baboo, S Santhosh},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Ensemble Systems for Automatic Fracture Detection.pdf:pdf},
+number = {1},
+pages = {1--4},
+title = {{Ensemble Systems for Automatic Fracture Detection}},
+volume = {4},
+year = {2012}
+}
