Literature Review Update

--- a/standard.bib
+++ b/standard.bib
@@ -387,3 +387,33 @@ title = {{Ensemble Systems for Automatic Fracture Detection}},
 volume = {4},
 year = {2012}
 }
+
+@article{Mahendran_Enhanced,
+author = {Mahendran, S K and Baboo, S Santhosh},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/An Enhanced Tibia Fracture Detection Tool Using Image.pdf:pdf},
+journal = {Global Journal of Computer Science and Technology},
+number = {14},
+pages = {22--28},
+title = {{An Enhanced Tibia Fracture Detection Tool Using Image Processing and Classification Fusion Techniques in X-Ray Images}},
+volume = {11},
+year = {2011}
+}
+
+@INPROCEEDINGS{ComputerAidedBoneFractureDetection, 
+author={Z. Ekşi and E. Dandıl and M. Çakıroğlu}, 
+booktitle={2012 20th Signal Processing and Communications Applications Conference (SIU)}, 
+title={Computer aided bone fracture detection}, 
+year={2012}, 
+pages={1-4}, 
+keywords={X-ray imaging;bone;image enhancement;medical image processing;neural nets;object detection;orthopaedics;ANN based automatic bone fracture detection system;X-ray image;artificial neural network;computer aided bone fracture detection;computer aided diagnosis system;diagnosis success;false detection rate;image enhancement;image preprocessing technique;orthopaedics field;true detection rate;Artificial neural networks;Bones;Computers;History;Indexes;Java;X-ray imaging}, 
+doi={10.1109/SIU.2012.6204644}, 
+ISSN={2165-0608}, 
+month={April},}
+
+@inproceedings{lim2004detection,
+  title={Detection of femur and radius fractures in x-ray images},
+  author={Lim, Sher Ee and Xing, Yage and Chen, Ying and Leow, Wee Kheng and Howe, Tet Sen and Png, Meng Ai},
+  booktitle={Proc. 2nd Int. Conf. on Advances in Medical Signal and Info. Proc},
+  volume={65},
+  year={2004}
+}
