--- a/standard.bib
+++ b/standard.bib
@@ -417,3 +417,36 @@ month={April},}
   volume={65},
   year={2004}
 }
+
+@article{JoshuaCongfuHe2007,
+abstract = {Computer Analysis of Images and Patterns},
+author = {{Joshua Congfu He}, Wee},
+doi = {10.1007/978-3-540-74272-2_119},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Hierarchical classifiers for detection of fractures in x-ray images.pdf:pdf},
+isbn = {978-3-540-74271-5},
+pages = {1--8},
+title = {{LNCS 4673 - Hierarchical Classifiers for Detection of Fractures in X-Ray Images}},
+year = {2007}
+}
+
+@INPROCEEDINGS{Wei_Liming_2010, 
+author={Z. Wei and Z. Liming}, 
+booktitle={2010 3rd International Congress on Image and Signal Processing}, 
+title={Study on recognition of the fracture injure site based on X-ray images}, 
+year={2010}, 
+volume={4}, 
+pages={1947-1950}, 
+keywords={X-ray imaging;bone;image recognition;injuries;medical image processing;X-ray images;X-ray testing;comprehensive analysis;fracture injure site;recognition;vertically integral projection;Algorithm design and analysis;Bones;Image edge detection;Injuries;Shape;X-ray imaging;AO coding;Curve Stitching;Images Shape Recognition;Orthopedic X-ray;Variance analysis}, 
+doi={10.1109/CISP.2010.5648055}, 
+month={Oct},}
+
+@book{Bone1988,
+author = {Bone, J},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Books/Prof.{\_}Dr.{\_}med.{\_}Maurice{\_}E.{\_}M{\"{u}}ller,{\_}Dr.{\_}med.{\_}Peter.pdf:pdf},
+isbn = {9783540181651},
+number = {4},
+title = {{The comprehensive Classification of Fractures of Long Bones}},
+volume = {70},
+year = {1988}
+}
+
