--- a/standard.bib
+++ b/standard.bib
@@ -440,13 +440,16 @@ keywords={X-ray imaging;bone;image recognition;injuries;medical image processing
 doi={10.1109/CISP.2010.5648055}, 
 month={Oct},}
 
-@book{Bone1988,
-author = {Bone, J},
-file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Books/Prof.{\_}Dr.{\_}med.{\_}Maurice{\_}E.{\_}M{\"{u}}ller,{\_}Dr.{\_}med.{\_}Peter.pdf:pdf},
-isbn = {9783540181651},
-number = {4},
-title = {{The comprehensive Classification of Fractures of Long Bones}},
-volume = {70},
-year = {1988}
+@article{Murphy2006,
+abstract = {Abstract. Class binarizations are effective methods for improving weak learners by decomposingmulti-class problems into several two-class prob- lems. This paper analyzes how these methods can be applied to a Naive Bayes learner. The key result is that the pairwise variant of Naive Bayes is equivalent to a regular Naive Bayes. This result holds for several aggrega- tion techniques for combining the predictions of the individual classifiers, including the commonly used voting and weighted voting techniques. On the other hand, Naive Bayes with one-against-all binarization is not equivalent to a regular Naive Bayes. Apart from the theoretical results themselves, the paper offers a discussion of their implications.},
+author = {Murphy, Kevin P},
+doi = {10.1007/978-3-540-74958-5_35},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/naive-bayes.pdf:pdf},
+isbn = {978-0262018029},
+journal = {Bernoulli},
+number = {October},
+pages = {1--8},
+title = {{Naive Bayes classifiers Generative classifiers}},
+volume = {4701},
+year = {2006}
 }
-
